--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.10.1",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "express": "^5.1.0"
+    "@types/jsonwebtoken": "^9.0.10",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-oauth": "^1.0.0"
   },
   "devDependencies": {
+    "@types/express-session": "^1.18.2",
+    "@types/passport-google-oauth20": "^2.0.16",
     "prisma": "^6.10.1"
   }
 }
