--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-just-parallax": "^3.1.16",
+    "scroll-lock": "^2.1.5",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
